# SenHub

./: .gitignore  LIVOX_MULTI_RADAR_ANALYSIS.md  README.md  check-and-restart-server.sh  check_livox_on_server.sh  check_livox_sdk.sh  cleanup_disk.sh  config.yaml  deploy-full.sh  deploy_to_server.sh  go.mod  run_tests_on_server.sh  run_tiandy_capture_demo_on_server.sh  start-service.sh  start_server.sh  sync-and-deploy.sh  test-radar-websocket.html  video-gateway.service
bash/: PACK.md  install.sh
cmd/: main.go
cron/: video-gateway
docs/: conversation-summary-compressed.md  mqtt-architecture-summary.md  mqtt-integration-protocol.md  mqtt-message-body-spec.md  plan-audit-code-checklist.md  pointcloud-high-performance-rendering.md  pointcloud-websocket-throughput-analysis.md  radar-camera-coordinate-alignment.md  radar-integration-implementation.md  radar-ptz-capture-implementation.md  tiandy-sdk-linux-deployment.md
mqtt-client/: README.md  activate.sh  config.json  mqtt_subscriber.py  mqtt_test_client.py  run_subscriber_with_log.sh
server/: .dockerignore  .gitignore  CAMERA_CONNECTION_ANALYSIS.md  CaptureTest.java  Dockerfile  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  README.en.md  README.md  REFACTORING_SUMMARY.md  dependency-reduced-pom.xml  deploy-update.sh  docker-build-run.sh  docker-compose.yml  docker-dev.sh  docker-run.sh  docker-test-integration.sh  docker-test.sh  pom.xml  test-api-container.sh  test-api.sh
server/jni/: CMakeLists.txt  LivoxJNI.cpp  LivoxJNI.h
web-iot-panel/: App.tsx  POINTCLOUD_OPTIMIZATION.md  constants.ts  flv.d.ts  index.html  locales.ts  metadata.json  package.json  types.ts
web-ui/: App.tsx  README.md  locales.ts  package.json  vite.config.ts
(+7743 files in other folders)
